--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: 50px repeat(3, 1fr);
   align-items: center;
   color: #3F68A0;
   background: #F5F9F9;
@@ -22,7 +22,20 @@ input, .urlTab{
 
 .addSection {
   grid-row: 2/2;
-  grid-column: 1/span 3;
+  grid-column: 1/5;
+  display: grid;
+  grid-template-columns: 20px 1fr 20px;
+  grid-template-rows: 1fr 1fr;
+}
+.formLabel {
+  grid-row: 1/1;
+  grid-column: 2/5;
+  justify-self: center;
+}
+
+.formInput {
+  grid-row: 2/2;
+  grid-column: 2/5;
   justify-self: center;
 }
 
@@ -39,6 +52,7 @@ input, .urlTab{
 }
 
 .btn {
+  margin-top: 5px;
   padding: 5px;
   color: #3F68A0;
   background: #F5F9F9;
