--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
+  overflow: scroll;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 50px repeat(3, 1fr);
+  grid-template-columns: 3rem 1fr 3rem;
+  grid-template-rows: 50px 10rem 1fr 7rem;
   align-items: center;
   color: #3F68A0;
   background: #F5F9F9;
@@ -35,15 +36,26 @@ input, .urlTab{
 
 .formInput {
   grid-row: 2/2;
-  grid-column: 2/5;
+  grid-column: 2/4;
   justify-self: center;
 }
 
-.removeSection {
+.urlSection {
+  grid-row: 3/3;
+  grid-column:2/3;
+}
+#urls > li {
+  height: 100%;
+  width: 100%;
+  display: inline-block;
   grid-row: 3/3;
   grid-column: 1/span 3;
+  color: black;
+  font-weight: lighter;
 }
-
+#urls > li > p{
+  display: inline;
+}
 .support, h3 {
   grid-row: 4/4;
   grid-column: 2/span 2;
@@ -62,4 +74,11 @@ input, .urlTab{
 .btn:hover {
   background: #3F68A0;
   color: #F5F9F9;
+}
+#urls > li rmvBtn {
+  margin-top: 5px;
+  padding: 5px;
+  color: #3F68A0;
+  background: #F5F9F9;
+  border: 2px solid #274A83;
 }
